log
Sat 11 Mar 2023 02:22:13 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:3: error: ‘asas’ undeclared (first use in this function)
   17 |   asas
      |   ^~~~
exercises.c:17:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:17:7: error: expected ‘;’ before ‘}’ token
   17 |   asas
      |       ^
      |       ;
   18 | 
   19 | }
      | ~      
Compilation failed
24ad2f7
